# molmospaces-resources

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: python-publish.yml
molmospaces_resources/: __init__.py  behaviors.py  compact_trie.py  constants.py  file_utils.py  indexing.py  lmdb_data.py  manager.py  remote_storage.py  setup_utils.py  threading_utils.py
molmospaces_resources/scripts/: molmospaces_downloader.py  toyblocks_downloader.py
